# AdventOfCode

./: .gitignore  README.md  config_example.yml  get_input.py  pyproject.toml  sub_part2.py  submit
2022/day_9/: solution.py
2023/day_13/: input.txt  sub_part1.py
2023/day_14/: sub_part1.py
2023/day_5/: sub_part2.py
2024/day_1/: day_desc.md  solution.py
2024/day_2/: day_desc.md  solution.py
day_1/: draft.ipynb
day_11/: see.txt
day_13/: instructions.txt  sub_part1.py  sub_part2.py  test.txt
day_14/: instructions.txt
day_18/: test.py
day_3/: instructions.txt
day_test/: instructions.txt
templates/: daily_collect.py
